Adding search functionality

--- a/src/html/modules/card-finder.html
+++ b/src/html/modules/card-finder.html
@@ -2,7 +2,7 @@
   <div class="card__content card__content--alt">
     {{ svg('icon-computer', 'card__icon') }}
     <h4 class="card__title">Associate in Applied Science</h4>
-    <p>Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
+    <p class="card_desc">Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
     <p><span class="card__more card__more--empty"></span></p>
   </div>
 </a>
@@ -11,7 +11,7 @@
   <div class="card__content card__content--alt">
     {{ svg('icon-computer', 'card__icon') }}
     <h4 class="card__title">Business Studies: Admin Sys</h4>
-    <p>Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
+    <p class="card_desc">Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
     <p><span class="card__more card__more--empty"></span></p>
   </div>
 </a>
@@ -20,7 +20,7 @@
   <div class="card__content card__content--alt">
     {{ svg('icon-computer', 'card__icon') }}
     <h4 class="card__title">Administrative Office Tech</h4>
-    <p>Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
+    <p class="card_desc">Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
     <p><span class="card__more card__more--empty"></span></p>
   </div>
 </a>
@@ -29,7 +29,7 @@
   <div class="card__content card__content--alt">
     {{ svg('icon-computer', 'card__icon') }}
     <h4 class="card__title">Data Entry Operator</h4>
-    <p>Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
+    <p class="card_desc">Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
     <p><span class="card__more card__more--empty"></span></p>
   </div>
 </a>
@@ -38,7 +38,7 @@
   <div class="card__content card__content--alt">
     {{ svg('icon-computer', 'card__icon') }}
     <h4 class="card__title">Desktop Publishing</h4>
-    <p>Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
+    <p class="card_desc">Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
     <p><span class="card__more card__more--empty"></span></p>
   </div>
 </a>
@@ -47,7 +47,7 @@
   <div class="card__content card__content--alt">
     {{ svg('icon-computer', 'card__icon') }}
     <h4 class="card__title">Architectural Technology</h4>
-    <p>Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
+    <p class="card_desc">Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
     <p><span class="card__more card__more--empty"></span></p>
   </div>
 </a>
@@ -56,7 +56,7 @@
   <div class="card__content card__content--alt">
     {{ svg('icon-computer', 'card__icon') }}
     <h4 class="card__title">Office Assistant</h4>
-    <p>Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
+    <p class="card_desc">Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
     <p><span class="card__more card__more--empty"></span></p>
   </div>
 </a>
@@ -65,7 +65,7 @@
   <div class="card__content card__content--alt">
     {{ svg('icon-computer', 'card__icon') }}
     <h4 class="card__title">Interior Design</h4>
-    <p>Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
+    <p class="card_desc">Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
     <p><span class="card__more card__more--empty"></span></p>
   </div>
 </a>
@@ -74,7 +74,7 @@
   <div class="card__content card__content--alt">
     {{ svg('icon-computer', 'card__icon') }}
     <h4 class="card__title">Surgical Technology</h4>
-    <p>Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
+    <p class="card_desc">Animi inventore adipisci cupiditate, ab accusantium. Culpa delectus dolore optio quae quia iusto repellat eum unde adipisci, dolores!</p>
     <p><span class="card__more card__more--empty"></span></p>
   </div>
 </a>
