Add hero video play/pause buttons

--- a/src/html/modules/hero-tall.html
+++ b/src/html/modules/hero-tall.html
@@ -2,9 +2,15 @@
   <div class="hero__container hero__container--tall">
     <img class="hero__image hero__image--tall" src="//placehold.it/2400x1200" alt="placeholder">
     <div class="hero__video">
+
       <video muted loop autoplay playsinline>
         <source type="video/mp4" src="http://kctcs.mstoner.com/video/tech_program_video.mp4">
       </video>
+      <div class="z-10">
+        <button id="hero-video-control" title="pause" class="bg-transparent border-none absolute top-0 left-0 bg-black text-sm text-white opacity-50 p-1 rounded cursor-pointer">
+          <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pause" class="h-3 w-3" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"></path></svg>
+        </button>
+      </div>
     </div>
   </div>
 </div>
