--- a/src/html/home-redesign.html
+++ b/src/html/home-redesign.html
@@ -1,6 +1,6 @@
 {% set page = { title: 'Home Redesign', header: 'transparent', alert: false, alertOverlay: false } %}
 
-{% extends "templates/default.html" %}
+{% extends "templates/default-redesign.html" %}
 
 {% block body %}
 <main id="main-content" class="lg:-mt-49">
