--- a/src/html/modules/hero-tall-redesign.html
+++ b/src/html/modules/hero-tall-redesign.html
@@ -1,7 +1,7 @@
 <div class="hero">
   <div class="z-1 hidden absolute top-0 left-0 bg-black opacity-25 w-full h-full lg:block"></div>
   <div class="z-2 w-full flex flex-wrap absolute bottom-0 left-0 text-white lg:mb-10">
-    <h1 class="text-5xl font-semibold tracking-wider m-0 ml-5 lg:mb-20">Never Underestimate You.</h1>
+    <h1 class="text-5xl font-semibold tracking-wider m-0 ml-5 lg:mb-20" style="text-shadow: black -2px 2px;">Never Underestimate You.</h1>
     <div class="w-full flex justify-center items-center">
       <a href="#" class="w-auto text-white text-lg font-semibold border-0 hover:border-gold tracking-wide px-4 py-2 mr-16">Request Information</a>
       <a href="#" class="button w-auto text-2xl font-bold uppercase tracking-wider border-none rounded-lg px-8 py-4 -mt-5 hover:bg-white hover:text-blue">Apply Today</a>
