--- a/src/html/home-redesign.html
+++ b/src/html/home-redesign.html
@@ -22,27 +22,27 @@
   <div class="grid-container">
     <h2 class="text-center">You Can Afford College</h2>
     <div class="grid grid--tight justify-center">
-      <a class="card card--outline m-4" href="#">
-        <div class="card__image card__image--overlay">
-          <img src="//placehold.it/768x512" alt="placeholder">
+      <a class="card card--outline-blue m-4" href="#">
+        <div class="card__image card__image--overlay-yellow">
+          <img src="http://kctcs-assets.test/img/stock/annie-spratt-QckxruozjRg-unsplash.jpg" alt="placeholder">
           <h3 class="card__image__overlay">Affording College</h3>
         </div>
       </a>
-      <a class="card card--outline m-4" href="#">
-        <div class="card__image card__image--overlay">
-          <img src="//placehold.it/768x512" alt="placeholder">
+      <a class="card card--outline-blue m-4" href="#">
+        <div class="card__image card__image--overlay-yellow">
+          <img src="http://kctcs-assets.test/img/stock/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt="placeholder">
           <h3 class="card__image__overlay">Tuition & Costs</h3>
         </div>
       </a>
-      <a class="card card--outline m-4" href="#">
-        <div class="card__image card__image--overlay">
-          <img src="//placehold.it/768x512" alt="placeholder">
+      <a class="card card--outline-blue m-4" href="#">
+        <div class="card__image card__image--overlay-yellow">
+          <img src="http://kctcs-assets.test/img/stock/jeshoots-com--2vD8lIhdnw-unsplash.jpg" alt="placeholder">
           <h3 class="card__image__overlay">Paying For College</h3>
         </div>
       </a>
-      <a class="card card--outline m-4" href="#">
-        <div class="card__image card__image--overlay">
-          <img src="//placehold.it/768x512" alt="placeholder">
+      <a class="card card--outline-blue m-4" href="#">
+        <div class="card__image card__image--overlay-yellow">
+          <img src="http://kctcs-assets.test/img/stock/vasily-koloda-8CqDvPuo_kI-unsplash.jpg" alt="placeholder">
           <h3 class="card__image__overlay">Net Price Calculator</h3>
         </div>
       </a>
@@ -58,7 +58,7 @@
 
   {% include "modules/slider-wide.html" %}
 
-  {% include "modules/hslider-split.html" %}
+  {% include "modules/hslider-split-redesign.html" %}
 
 </main>
 {% endblock %}
