--- a/src/html/modules/hslider-split-redesign.html
+++ b/src/html/modules/hslider-split-redesign.html
@@ -1,5 +1,5 @@
-<div class="w-full my-10">
-  <div class="w-full flex bg-cover bg-top text-white" style="background-image: url('http://kctcs-assets.test/img/stock/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg')">
+<div class="w-full mt-10">
+  <div class="w-full flex bg-cover bg-top text-white" style="background-image: url('https://maysville.kctcs.edu/_resources/images/homepage/homepage-entity-workready.jpg')">
     <div class="w-1/2 ml-auto p-24" style="background-color: rgba(0, 70, 127, 0.7)">
       <h2 class="text-2xl mt-0 mb-5">Focused Workforce Education and Readiness</h2>
       <p class="mb-0">We have programs that can get you on the fast track to a high paying, high demand
@@ -9,32 +9,33 @@
     </div>
   </div>
 
-  <div class="w-full flex bg-cover bg-top text-white" style="background-image: url('http://kctcs-assets.test/img/stock/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg')">
+  <div class="w-full flex bg-cover bg-center text-white" style="background-image: url('https://maysville.kctcs.edu/_resources/images/homepage/homepage-giving.jpg')">
     <div class="w-1/2 p-24" style="background-color: rgba(206, 14, 45, 0.7)">
-      <h2 class="text-2xl mt-0 mb-5">Focused Workforce Education and Readiness</h2>
-      <p class="mb-0">We have programs that can get you on the fast track to a high paying, high demand
-        job. These programs are customized to the needs of local businesses, with an understanding
-        of local values.
+      <h2 class="text-2xl mt-0 mb-5">Invested in Every Student</h2>
+      <p class="mb-0">You are not just a number here; you are the reason we do what we do. Our faculty take
+        a personal interest in your future and are here to help you navigate your journey.
+        Everyone is here to make sure You’ve Got This!
       </p>
     </div>
   </div>
 
-  <div class="w-full flex bg-cover bg-top text-white" style="background-image: url('http://kctcs-assets.test/img/stock/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg')">
+  <div class="w-full flex bg-cover bg-top text-white" style="background-image: url('https://bigsandy.kctcs.edu/_resources/images/homepage-giving.jpg')">
     <div class="w-1/2 ml-auto p-24" style="background-color: rgba(231, 166, 20, 0.7)">
-      <h2 class="text-2xl mt-0 mb-5">Focused Workforce Education and Readiness</h2>
-      <p class="mb-0">We have programs that can get you on the fast track to a high paying, high demand
-        job. These programs are customized to the needs of local businesses, with an understanding
-        of local values.
+      <h2 class="text-2xl mt-0 mb-5">Encouraging and Approachable</h2>
+      <p class="mb-0">Offering you a challenging education in a supportive environment practically in your
+        backyard is what we do. We may expect a lot, but we know you are willing to do whatever
+        it takes, and we’ll do whatever it takes to help.
+
       </p>
     </div>
   </div>
 
-  <div class="w-full flex bg-cover bg-top text-white" style="background-image: url('http://kctcs-assets.test/img/stock/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg')">
+  <div class="w-full flex bg-cover bg-top text-white" style="background-image: url('https://elizabethtown.kctcs.edu/_resources/images/homepage/homepage-giving.jpg')">
     <div class="w-1/2 p-24" style="background-color: rgba(97, 166, 14, 0.7)">
-      <h2 class="text-2xl mt-0 mb-5">Focused Workforce Education and Readiness</h2>
-      <p class="mb-0">We have programs that can get you on the fast track to a high paying, high demand
-        job. These programs are customized to the needs of local businesses, with an understanding
-        of local values.
+      <h2 class="text-2xl mt-0 mb-5">Engaged in the Community</h2>
+      <p class="mb-0">We live and breathe the words “community college” every day. The communities we serve
+        are the core of our colleges. Our students stay in the community when they graduate
+        and are committed to giving back and bettering the lives of others.
       </p>
     </div>
   </div>
