--- a/src/html/home-redesign.html
+++ b/src/html/home-redesign.html
@@ -17,46 +17,53 @@
 
   {% include "modules/grid-tight-redesign.html" %}
 
-  {% include "modules/hslider-cta.html" %}
+<!--  {% include "modules/hslider-cta-redesign.html" %}-->
+  <!-- Testimonial -->
+  <div class="flex h-screen w-screen bg-fixed bg-cover bg-no-repeat bg-top items-end" style="background-image: url('https://maysville.kctcs.edu/affording-college/media/images/affording-banner.jpg')">
+    <div class="w-1/2 bg-blue-dark text-white p-10 ml-auto mb-24">
+      <p class="text-gold text-3xl font-bold m-0 leading-none">Betsy Myers</p>
+      <small class="text-gray-darker m-0 leading-none ml-3">Business Administration</small>
+      <p class="text-2xl leading-tight m-0">Consequuntur quod vel aliquid, ab, excepturi in! Sapiente, minus.</p>
+    </div>
+  </div>
 
-  <div class="grid-container">
-    <h2 class="text-center">You Can Afford College</h2>
-    <div class="grid grid--tight justify-center">
-      <a class="card card--outline-blue m-4" href="#">
-        <div class="card__image card__image--overlay-yellow">
+  <!-- Affording College -->
+  <div class="w-full flex flex-wrap mb-32">
+    <h2 class="w-full text-center">You Can Afford College</h2>
+    <div class="w-full flex flex-wrap justify-center">
+      <a class="clip-left w-5/12 card m-4" href="#" style="max-height: 300px">
+        <div class="card__image card__image--overlay-yellow" style="max-height: 300px">
           <img src="http://kctcs-assets.test/img/stock/annie-spratt-QckxruozjRg-unsplash.jpg" alt="placeholder">
-          <h3 class="card__image__overlay">Affording College</h3>
+          <h3 class="card__image__overlay text-blue-dark">Affording College</h3>
         </div>
       </a>
-      <a class="card card--outline-blue m-4" href="#">
-        <div class="card__image card__image--overlay-yellow">
+      <a class="clip-right w-5/12 card m-4" href="#" style="max-height: 300px">
+        <div class="card__image card__image--overlay-yellow" style="max-height: 300px">
           <img src="http://kctcs-assets.test/img/stock/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt="placeholder">
-          <h3 class="card__image__overlay">Tuition & Costs</h3>
+          <h3 class="card__image__overlay text-blue-dark">Tuition & Costs</h3>
         </div>
       </a>
-      <a class="card card--outline-blue m-4" href="#">
-        <div class="card__image card__image--overlay-yellow">
+      <a class="clip-right w-5/12 card m-4" href="#" style="max-height: 300px">
+        <div class="card__image card__image--overlay-yellow" style="max-height: 300px">
           <img src="http://kctcs-assets.test/img/stock/jeshoots-com--2vD8lIhdnw-unsplash.jpg" alt="placeholder">
-          <h3 class="card__image__overlay">Paying For College</h3>
+          <h3 class="card__image__overlay text-blue-dark">Paying For College</h3>
         </div>
       </a>
-      <a class="card card--outline-blue m-4" href="#">
-        <div class="card__image card__image--overlay-yellow">
+      <a class="clip-left w-5/12 card m-4" href="#" style="max-height: 300px">
+        <div class="card__image card__image--overlay-yellow" style="max-height: 300px">
           <img src="http://kctcs-assets.test/img/stock/vasily-koloda-8CqDvPuo_kI-unsplash.jpg" alt="placeholder">
-          <h3 class="card__image__overlay">Net Price Calculator</h3>
+          <h3 class="card__image__overlay text-blue-dark">Net Price Calculator</h3>
         </div>
       </a>
     </div>
   </div>
 
-  <div class="block block--blue block--clip-tl-br block--tight">
+  <div class="block block--blue block--clip-tl-br block--tight mb-32">
     <h2 class="text-center heading--flush">At Maysville</h2>
     <div class="block__container">
       {% include "modules/tabs-alt.html" %}
     </div>
   </div>
-
-  {% include "modules/slider-wide.html" %}
 
   {% include "modules/hslider-split-redesign.html" %}
 
