--- a/src/html/modules/header-redesign.html
+++ b/src/html/modules/header-redesign.html
@@ -46,12 +46,13 @@
             </ul>
 
             <ul class="header__utility">
-              <li class="header__utility__item"><a href="#" class="header__utility__link">Current Students</a></li>
-              <li class="header__utility__item"><a href="#" class="header__utility__link">Parents</a></li>
-              <li class="header__utility__item"><a href="#" class="header__utility__link">Alumni</a></li>
-              <li class="header__utility__item"><a href="#" class="header__utility__link">Faculty &amp; Staff</a></li>
-              <li class="header__utility__item"><a href="#" class="header__utility__link">Community</a></li>
+              <li class="header__utility__item"><a href="#" class="header__utility__link">My Path</a></li>
+              <li class="header__utility__item"><a href="#" class="header__utility__link">Job Seekers</a></li>
               <li class="header__utility__item"><a href="#" class="header__utility__link">Workforce Solutions</a></li>
+              <li class="header__utility__item"><a href="#" class="header__utility__link">Giving</a></li>
+              <li class="header__utility__item">
+                <a href="#" class="header__utility__link">Quick Links</a>
+              </li>
             </ul>
             <a href="#" class="button button--white header__menu__button">Start Your Application</a>
           </div>
