--- a/src/html/modules/tabs-alt.html
+++ b/src/html/modules/tabs-alt.html
@@ -1,4 +1,4 @@
-{% set tabs = ['News', 'Events'] %}
+{% set tabs = ['News', 'Events', 'Announcements'] %}
 
 <div class="tabs tabs--alt">
   <div class="tabs__nav tabs__nav--alt">
