--- a/src/html/home-redesign.html
+++ b/src/html/home-redesign.html
@@ -19,7 +19,7 @@
 
 <!--  {% include "modules/hslider-cta-redesign.html" %}-->
   <!-- Testimonial -->
-  <div class="flex h-screen w-screen bg-fixed bg-cover bg-no-repeat bg-top items-end" style="background-image: url('https://maysville.kctcs.edu/affording-college/media/images/affording-banner.jpg')">
+  <div class="flex h-sm w-screen bg-fixed bg-cover bg-no-repeat bg-top items-end" style="background-image: url('https://maysville.kctcs.edu/affording-college/media/images/affording-banner.jpg')">
     <div class="w-1/2 bg-blue-dark text-white p-10 ml-auto mb-24">
       <p class="text-gold text-3xl font-bold m-0 leading-none">Betsy Myers</p>
       <small class="text-gray-darker m-0 leading-none ml-3">Business Administration</small>
