Change alert colors

--- a/src/html/modules/alert.html
+++ b/src/html/modules/alert.html
@@ -1,4 +1,4 @@
-<div class="alert" role="alert" aria-labelledby="alert1">
+<div class="alert bg-red" role="alert" aria-labelledby="alert1">
   <div class="alert__container">
     {{ svg('icon-warning', 'alert__icon') }}
     <div class="alert__text">
